--- a/buy_nft/pubspec.yaml
+++ b/buy_nft/pubspec.yaml
@@ -35,20 +35,17 @@ dependencies:
   flutter_hooks: ^0.18.5+1
   google_fonts: ^3.0.1
   nb_utils: ^4.6.24
+  flutter_gen: ^5.1.0+1
+  build_runner: ^2.3.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-# The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+ 
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   # assets:
