--- a/buy_nft/pubspec.yaml
+++ b/buy_nft/pubspec.yaml
@@ -36,41 +36,38 @@ dependencies:
   google_fonts: ^3.0.1
   nb_utils: ^4.6.24
   flutter_gen: ^5.1.0+1
-  build_runner: ^2.3.2
+ 
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  flutter_gen_runner: ^5.0.2
+  build_runner: null
   flutter_test:
     sdk: flutter
 
-flutter:
+#flutter gen setup
+flutter_gen:
+  output: lib/gen/ # Optional (default: lib/gen/)
+  line_length: 80 # Optional (default: 80)
 
- 
+  # Optional
+  #flutter_svg: 
+    #flare_flutter: true
+    #rive: true
+    #lottie: true
+
+  colors:
+    enabled: true
+    outputs:
+      class_name: AppColor
+    inputs:
+      - assets/color/colors.xml
+
+flutter:
   uses-material-design: true
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/icons/
+    - assets/images/
+    - assets/
+
+
