--- a/buy_nft/.vscode/settings.json
+++ b/buy_nft/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.configureOnOpen": true
+    "cmake.configureOnOpen": true,
+    "cmake.sourceDirectory": "E:/portfolio/website/buy_nft/linux"
 }
