Revert "feat: :zap: Added Side Menu Drawer for Mobile Screen"
This reverts commit 00ffeac5dbf09c3924781ace947e120ad2dca2c4.

--- a/buy_nft/.vscode/settings.json
+++ b/buy_nft/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "cmake.configureOnOpen": true,
-    "cmake.sourceDirectory": "E:/portfolio/website/buy_nft/linux"
+    "cmake.configureOnOpen": true
 }
