feat(Mobile View): :art: Changed Navigation Drawer Background Color

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "cmake.configureOnOpen": true,
-    "cmake.sourceDirectory": "E:/portfolio/website/buy_nft/linux"
+    "cmake.sourceDirectory": "E:/portfolio/website/buy_nft/linux",
+    "conventionalCommits.scopes": [
+        "Mobile View"
+    ]
 }
